# backend

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  package-lock.json  package.json  requirements.txt  resources.yml  serverless.yml
.github/workflows/: deploy.yml  main.yml
doc/: tips_and_tricks.md
findme-location-riddles/: README.md  handler.py  requirements.txt
findme-location-riddles/src/: ImageBucketRepository.py  ImageDbRepository.py  ImageRepository.py  LocationRiddle.py  LocationRiddleRepository.py  LocationRiddlesRepository.py  LocationRiddlesService.py  UserImages.py  UserMicroserviceClient.py
findme-location-riddles/tests/: test_calculate_distance.py  test_calculate_score.py  test_calculate_score_and_distance.py  test_location_riddle_service.py
findme-users/: README.md  handler.py  insert_default_data_to_dynamodb.py  pyproject.toml  requirements.txt
findme-users/src/: FollowerRepository.py  FollowerService.py  User.py  UserDto.py  UserRepository.py  UserService.py
findme-users/src/base/: AbstractFollowerRepository.py  AbstractUserRepository.py
findme-users/src/entities/: FollowRelationship.py  FollowRequest.py  PartitionKey.py  Score.py  User.py  UserConnections.py
findme-users/src/test/: MockUserRepository.py
findme-users/tests/: test_follower_repository.py  test_follower_service.py  test_user_service.py
infrastructure/apigateway/: serverless.yml
infrastructure/default_setup/: default_setup.sh  default_users.json
infrastructure/default_state_setup/: README.md  setup.sh
(+20 files in other folders)
